# iff-live

./: iff-live.cabal
resources/static/: screen.css
resources/templates/: announce.tpl  goal.tpl
src/: IFF.hs  Site.hs
