Name:                iff-live
Version:             0.1
Synopsis:            Shows the stats for IFF floorball games live
Description:         Scrapes the IFF website for stats and serves them up
                     in an easy to consume format.
License:             AllRightsReserved
Author:              Jacob Stanley
Maintainer:          Jacob Stanley <jacob@stanley.io>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable iff-live
  hs-source-dirs: src
  main-is: Main.hs

  if !flag(development)
    cpp-options: -DPRODUCTION
  else
    build-depends: hint >= 0.3.2 && < 0.4

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    heist >= 0.4 && < 0.5,
    hexpat >= 0.19 && < 0.20,
    HTTP >= 4000.1.1 && < 4000.2,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap >= 0.3 && < 0.4,
    snap-core >= 0.3 && < 0.4,
    snap-server >= 0.3 && <0.4,
    tagsoup >= 0.12 && < 0.13,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

